--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-     <meta charset="utf-8" emacsmode="-*- markdown -*-"><link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/website.css?">
+     <meta charset="utf-8" emacsmode="-*- markdown -*-"><style class="fallback">body{visibility:hidden}</style><link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/dark.css?">
 
 # Age of Empires 2: Bounty Challenges by Grathwrang
 
@@ -32,5 +32,4 @@ Grathwrang's streams are live every Sunday on [Twitch](https://www.twitch.tv/gra
 For any inquiries or suggestions, feel free to join the [Discord](https://discord.com/channels/695856820308279368/1224007070378889307) and post in the #bounties-channel 
 
 
-<style class="fallback">body{visibility:hidden}</style><script>markdeepOptions={tocStyle:'long'};</script>
-<!-- Markdeep: --><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?" charset="utf-8"></script>
+<!-- Markdeep: --><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js?" charset="utf-8"></script>
